--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,5 @@
 repos:
 -   repo: https://github.com/pycqa/flake8
-    rev: ''  # pick a git hash / tag to point to
+    rev: '3.9.1'  # pick a git hash / tag to point to
     hooks:
     -   id: flake8
-    -   id: black
