--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,10 +1,12 @@
 repos:
--   repo: https://github.com/pycqa/flake8
-    rev: '3.9.1'  # pick a git hash / tag to point to
-    hooks:
-    -   id: flake8
-
 -   repo: https://github.com/psf/black
     rev: 20.8b1
     hooks:
     -   id: black
+        args: [-l 79]
+
+-   repo: https://github.com/pycqa/flake8
+    rev: '3.9.1'  # pick a git hash / tag to point to
+    hooks:
+    -   id: flake8
+        exclude: alembic/
